--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -69,8 +69,152 @@
             <ul>
                <li class="nav-attention"><a href="">Распродажа</a></li>
                <li><a href="">Новинки</a></li>
-               <li><a href="">Женская <img src="img/icons/arrowHorizontal.svg" alt=""></a></li>
-               <li><a href="">Мужская <img src="img/icons/arrowHorizontal.svg" alt=""></a></li>
+               <li>
+                  <a href="">Женская <img src="img/icons/arrowHorizontal.svg" alt=""></a>
+                  
+                  <div class="mobile-catalog-popup">
+                     <div class="mobile-catalog-popup_header">
+                         <div class="mobile-catalog-popup_header_arrow">
+                             <img src="img/icons/arrow_small.svg" alt="">
+                         </div>
+                         <div class="mobile-catalog-popup_header_text">
+                             Женская
+                         </div> 
+                     </div>
+                     <div class="mobile-catalog-popup_body">
+                         <div class="mobile-catalog-popup_body_list">
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Балетки
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Босоножки
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Ботинки
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Бутсы
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item active">
+                                 <a href="#">
+                                     Вкладыш В Сапог
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Галоши
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Дутики
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Кеды
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Кроксы
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Кроссовки
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Луноходы
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                             <div class="mobile-catalog-popup_body_list_item">
+                                 <a href="#">
+                                     Мокасины
+                                 </a>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+               </li>
+               <li>
+                  <a href="">Мужская <img src="img/icons/arrowHorizontal.svg" alt=""></a>
+               </li>
                <li><a href="">Детская <img src="img/icons/arrowHorizontal.svg" alt=""></a></li>
                <li>
                   <a href="">Украинская обувь</a>
@@ -357,6 +501,7 @@
                         </ul>
                      </div>
                   </div>
+
                </li>
                <li>
                   <div>
