--- a/assets/stylesheets/bem/old.scss
+++ b/assets/stylesheets/bem/old.scss
@@ -550,7 +550,122 @@ input {
             left: 0;
         }
     }
+
+    button {
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 16px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        color: #25B4E5;
+        background: #099BCD;
+        border: 1px solid #25B4E5;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 25px;
+        position: relative;
+        z-index: 0;
+
+        &:nth-child(2) {
+            border-left: none;
+            border-bottom-left-radius: 0;
+            border-top-left-radius: 0;
+            width: 52px;
+            left: -2px;
+        }
+
+        &:nth-child(1) {
+            border-right: none;
+            border-bottom-right-radius: 0;
+            border-top-right-radius: 0;
+            width: 52px;
+            right: -2px;
+        }
+
+        &.active-lang {
+            background: #FFFFFF;
+            border: none;
+            z-index: 1;
+            border-radius: 5px;
+            left: 0;
+        }
+    }
 }
+
+.mobile-catalog-popup{
+    margin-top: 0px;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: white;
+    left: 0;
+    top: 0;
+    padding: 0px !important;
+    z-index: 999;
+    display: block !important;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    overflow-y: scroll;
+    opacity: 0;
+    visibility: hidden;
+    display: block;
+  
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+  
+    &_header{
+      height: 55px;
+      width: 100%;
+      background-color: #F8F8F8;
+      display: inline-flex;  
+  
+      &_text{
+        height: 100%;
+        width: 100%;
+        display: block;
+        font-size: 28px;
+        color: black;
+        font-family: Fira Sans Condensed;
+        display: inline-block;
+        line-height: 55px;
+        margin-left: 20px;
+      }
+  
+      &_arrow{
+        height: 55px;
+        width: 18px;
+        transform: rotate(180deg);
+        vertical-align: middle;
+        margin-left: 20px;
+        img{
+          height: 100%;
+          display: inline-block;
+        }
+      }
+    }
+  
+    &_body{
+      &_list{
+        padding-left: 55px;
+        &_item{
+          color:black;
+          font-size: 22px;
+          margin-top: 30px;
+  
+          &.active{
+            color: #1CC5FF;
+          }
+        }
+      }
+    }
+  }
+  
 
 .desktop-middle-header {
     padding: 19px 0;
