--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -69,7 +69,7 @@
             <ul>
                <li class="nav-attention"><a href="">Распродажа</a></li>
                <li><a href="">Новинки</a></li>
-               <li>
+               <li class="nav-to-list">
                   <a href="">Женская <img src="img/icons/arrowHorizontal.svg" alt=""></a>
                   
                   <div class="mobile-catalog-popup">
