--- a/assets/html/partials/account/myorders.html
+++ b/assets/html/partials/account/myorders.html
@@ -47,6 +47,24 @@
                 <div class="myorders__item_header_icon">
                   <i class="i-arrow"></i>
                 </div>
+
+                <div class="myorders__item_header_mobile">
+                  <div class="myorders__item_header_mobile_num">
+                    <p>№ 1234567890098</p>
+                  </div>
+                  <div class="myorders__item_header_mobile_icon">
+                    <i class="i-arrow"></i>
+                  </div>
+                  <div class="myorders__item_header_mobile_date">
+                    <p>5 ноября 2019 15:11</p>
+                  </div>
+                  <div class="myorders__item_header_mobile_info">
+                    <p>3 товар на 480.00 ₴ </p>
+                  </div>
+                  <div class="myorders__item_header_mobile_stat green">
+                    <p>Новый заказ</p>
+                  </div>
+                </div>
               </button>
               <div class="accordion-panel  myorders__item_body">
                 <div class="basket__list_item">
@@ -68,6 +86,28 @@
                   <div class="basket__list_item_summ">
                     <p>600.00 ₴ </p>
                   </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="basket__list_item">
                   <div class="basket__list_item_img">
@@ -88,6 +128,70 @@
                   <div class="basket__list_item_summ">
                     <p>600.00 ₴ </p>
                   </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__list_item">
+                  <div class="basket__list_item_img">
+                    <img src="img/images/cardImage1.jpg" alt="">
+                  </div>
+                  <div class="basket__list_item_name">
+                    <p>Босоножки 00001-beige</p>
+                  </div>
+                  <div class="basket__list_item_kod">
+                    <p>Zoom-00002-beige</p>
+                  </div>
+                  <div class="basket__list_item_price">
+                    <p>60.00 ₴ </p>
+                  </div>
+                  <div class="basket__list_item_counter">
+                    <p>кол 1</p>
+                  </div>
+                  <div class="basket__list_item_summ">
+                    <p>600.00 ₴ </p>
+                  </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="myorders__item_body_footer">
                   <div class="myorders__item_body_footer_info">
@@ -95,8 +199,9 @@
                       Одесса, Отделение №3, ул. Дальницкая, д.23/4</p>
                   </div>
                   <div class="myorders__item_body_footer_price">
-                    <p>Итого к оплате:</p>
-                    <span>540 ₴ </span>
+                    <p class="desktop">Итого к оплате:</p>
+                    <p class="mobile">Итого:</p>
+                    <span>540 ₴</span>
                   </div>
                 </div>
               </div>
@@ -120,6 +225,24 @@
                 <div class="myorders__item_header_icon">
                   <i class="i-arrow"></i>
                 </div>
+
+                <div class="myorders__item_header_mobile">
+                  <div class="myorders__item_header_mobile_num">
+                    <p>№ 1234567890098</p>
+                  </div>
+                  <div class="myorders__item_header_mobile_icon">
+                    <i class="i-arrow"></i>
+                  </div>
+                  <div class="myorders__item_header_mobile_date">
+                    <p>5 ноября 2019 15:11</p>
+                  </div>
+                  <div class="myorders__item_header_mobile_info">
+                    <p>3 товар на 480.00 ₴ </p>
+                  </div>
+                  <div class="myorders__item_header_mobile_stat green">
+                    <p>Новый заказ</p>
+                  </div>
+                </div>
               </button>
               <div class="accordion-panel  myorders__item_body">
                 <div class="basket__list_item">
@@ -141,6 +264,28 @@
                   <div class="basket__list_item_summ">
                     <p>600.00 ₴ </p>
                   </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="basket__list_item">
                   <div class="basket__list_item_img">
@@ -161,6 +306,70 @@
                   <div class="basket__list_item_summ">
                     <p>600.00 ₴ </p>
                   </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__list_item">
+                  <div class="basket__list_item_img">
+                    <img src="img/images/cardImage1.jpg" alt="">
+                  </div>
+                  <div class="basket__list_item_name">
+                    <p>Босоножки 00001-beige</p>
+                  </div>
+                  <div class="basket__list_item_kod">
+                    <p>Zoom-00002-beige</p>
+                  </div>
+                  <div class="basket__list_item_price">
+                    <p>60.00 ₴ </p>
+                  </div>
+                  <div class="basket__list_item_counter">
+                    <p>кол 1</p>
+                  </div>
+                  <div class="basket__list_item_summ">
+                    <p>600.00 ₴ </p>
+                  </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="myorders__item_body_footer">
                   <div class="myorders__item_body_footer_info">
@@ -168,8 +377,9 @@
                       Одесса, Отделение №3, ул. Дальницкая, д.23/4</p>
                   </div>
                   <div class="myorders__item_body_footer_price">
-                    <p>Итого к оплате:</p>
-                    <span>540 ₴ </span>
+                    <p class="desktop">Итого к оплате:</p>
+                    <p class="mobile">Итого:</p>
+                    <span>540 ₴</span>
                   </div>
                 </div>
               </div>
@@ -187,11 +397,29 @@
                 <div class="myorders__item_header_info">
                   <p>3 товар на 480.00 ₴ </p>
                 </div>
-                <div class="myorders__item_header_stat blue">
+                <div class="myorders__item_header_stat green">
                   <p>Новый заказ</p>
                 </div>
                 <div class="myorders__item_header_icon">
                   <i class="i-arrow"></i>
+                </div>
+
+                <div class="myorders__item_header_mobile">
+                  <div class="myorders__item_header_mobile_num">
+                    <p>№ 1234567890098</p>
+                  </div>
+                  <div class="myorders__item_header_mobile_icon">
+                    <i class="i-arrow"></i>
+                  </div>
+                  <div class="myorders__item_header_mobile_date">
+                    <p>5 ноября 2019 15:11</p>
+                  </div>
+                  <div class="myorders__item_header_mobile_info">
+                    <p>3 товар на 480.00 ₴ </p>
+                  </div>
+                  <div class="myorders__item_header_mobile_stat green">
+                    <p>Новый заказ</p>
+                  </div>
                 </div>
               </button>
               <div class="accordion-panel  myorders__item_body">
@@ -214,6 +442,28 @@
                   <div class="basket__list_item_summ">
                     <p>600.00 ₴ </p>
                   </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="basket__list_item">
                   <div class="basket__list_item_img">
@@ -234,6 +484,70 @@
                   <div class="basket__list_item_summ">
                     <p>600.00 ₴ </p>
                   </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="basket__list_item">
+                  <div class="basket__list_item_img">
+                    <img src="img/images/cardImage1.jpg" alt="">
+                  </div>
+                  <div class="basket__list_item_name">
+                    <p>Босоножки 00001-beige</p>
+                  </div>
+                  <div class="basket__list_item_kod">
+                    <p>Zoom-00002-beige</p>
+                  </div>
+                  <div class="basket__list_item_price">
+                    <p>60.00 ₴ </p>
+                  </div>
+                  <div class="basket__list_item_counter">
+                    <p>кол 1</p>
+                  </div>
+                  <div class="basket__list_item_summ">
+                    <p>600.00 ₴ </p>
+                  </div>
+                  <div class="basket__list_item_mobile">
+                    <div class="basket__list_item_mobile_img">
+                      <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="basket__list_item_mobile_content">
+                      <div class="basket__list_item_mobile_name">
+                        <p>Босоножки 00001-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_kod">
+                        <p>Zoom-00002-beige</p>
+                      </div>
+                      <div class="basket__list_item_mobile_price">
+                        <p>60.00 ₴ </p>
+                      </div>
+                      <div class="basket__list_item_mobile_counter">
+                        <p>кол 1</p>
+                      </div>
+                      <div class="basket__list_item_mobile_summ">
+                        <p>600.00 ₴ </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="myorders__item_body_footer">
                   <div class="myorders__item_body_footer_info">
@@ -241,8 +555,9 @@
                       Одесса, Отделение №3, ул. Дальницкая, д.23/4</p>
                   </div>
                   <div class="myorders__item_body_footer_price">
-                    <p>Итого к оплате:</p>
-                    <span>540 ₴ </span>
+                    <p class="desktop">Итого к оплате:</p>
+                    <p class="mobile">Итого:</p>
+                    <span>540 ₴</span>
                   </div>
                 </div>
               </div>
