--- a/assets/stylesheets/bem/account/favorite.scss
+++ b/assets/stylesheets/bem/account/favorite.scss
@@ -27,7 +27,8 @@
 
       @media (max-width:900px){
         width: 46%;
-        margin: 0 0;
+        margin: 0 0 10px 0;
+        
       }
     }
   }
