checkout fix font

--- a/assets/stylesheets/bem/checkout/checkout.scss
+++ b/assets/stylesheets/bem/checkout/checkout.scss
@@ -81,7 +81,7 @@
                 text-decoration-line: underline;
                 text-transform: uppercase;
                 color: #25B4E5;
-                font-family: Gotham Pro;
+                font-family: Open Sans,sans-serif;
 
                 &:hover {
                     text-decoration: none;
