--- a/assets/stylesheets/bem/old.scss
+++ b/assets/stylesheets/bem/old.scss
@@ -774,6 +774,9 @@ input {
 .desktop-search-result-item img {
     width: 30px;
 }
+.desktop-search-result-item p {
+    margin-left: 10px;
+}
 
 .desktop-searcher-wrapperBlock {
     border: 1px solid #E7E7E7;
