--- a/assets/html/partials/main/main.html
+++ b/assets/html/partials/main/main.html
@@ -162,14 +162,19 @@
          </div>
       </div>
       <div class="containerBlock">
-         <div class="main-brands">
-            <img src="img/icons/logo_mi.svg" alt="">
-            <img src="img/icons/logo_remax.svg" alt="">
-            <img src="img/icons/logo_belkin.svg" alt="">
-            <img src="img/icons/logo_baseus.svg" alt="">
-            <img src="img/icons/logo_ldnio.svg" alt="">
-            <img src="img/icons/logo-mango.svg" alt="">
-            <img src="img/icons/logo_oysho.svg" alt="">
+         <div class="containerBlock_wrapper">
+            <div class="main-brands">
+               <img src="img/icons/logo_mi.svg" alt="">
+               <img src="img/icons/logo_remax.svg" alt="">
+               <img src="img/icons/logo_belkin.svg" alt="">
+               <img src="img/icons/logo_baseus.svg" alt="">
+               <img src="img/icons/logo_ldnio.svg" alt="">
+               <img src="img/icons/logo-mango.svg" alt="">
+               <img src="img/icons/logo_oysho.svg" alt="">
+            </div>
+            <div class="showMore">
+               <a href='#'>Посмотреть ещё</a>
+            </div>
          </div>
       </div>
    </div>
