--- a/assets/stylesheets/bem/account/account.scss
+++ b/assets/stylesheets/bem/account/account.scss
@@ -21,7 +21,21 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    flex-wrap: wrap;
 
+    p {
+      width: 20%;
+    }
+
+    .form__input{
+      width: 70%;
+    }
+
+    .text-danger{
+      width: 90%;
+      color:red;
+      margin-top: 6px;
+    }
 
     @media (max-width:900px){
       display: block;
